--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,164 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+:root {
+  --theme : #20062e;
+  --blue : #18b2de;
+  --white :#fff;
+  --grey : #d7d7d7;
+  --purple-grey :#8f8297;
+}
+body{
+  font-family: "Poppins", sans-serif;
+  background-color: #20062E;
+  color: var(--white);
+  margin-bottom: 2.5rem;
+}
+input{
+  font-family: "Poppins", sans-serif;
+}
+a{
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.input-forms{
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  margin-top: 2rem;
 }
+.input-forms h1{
+  color: var(--white);
+  /* text-align: center; */
+  margin-bottom: 1rem;
+}
+
+.span-link{
+  color: #538cfe;
+  cursor: pointer;
+  margin-left: 5px;
+  transition: all .25s;
+}
+.span-link:hover{
+  color: #fff;
+}
+.podcast-list{
+  display: flex;
+  gap: 3rem;
+  flex-wrap: wrap;
+}
+
+
+
+.podcast-detail-title{
+  width: 100%;
+  text-align: left;
+}
+
+.podcast-detail-banner-image{
+  background: linear-gradient(
+        177.7deg,
+        rgba(58, 129, 191,0.3) 1.63%,
+        rgba(65, 48, 90, 0.009) 148.618%
+    );
+
+    border-radius: 1rem;
+    padding: 0.5rem;
+    width: 100%;
+}
+
+.podcast-detail-banner-image img{
+  width: 100%;
+  height: 300px;
+  object-fit: fill;
+}
+
+
+
+
+
+.episodes-list{
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+
+
+  gap: 0.5rem;
+  margin-bottom: 2rem;
+}
+
+
+
+
+.profile{
+  width: 100%;
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.profile-page{
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.profile-content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  gap: 2rem;
+
+  justify-content: center;
+  align-items: center;
+}
+.profile-logo{
+  width: 25%;
+  height: 250px !important;
+  border-radius: 100%;
+  padding: 0.5rem;
+  height: auto;
+  color: whitesmoke;
+
+  background: linear-gradient(
+        177.7deg,
+        rgba(58, 129, 191,0.3) 1.63%,
+        rgba(65, 48, 90, 0.009) 148.618%
+    );
+}
+.profile-img{
+  height: 100%;
+  border-radius: 100%;
+  object-fit: contain;
+}
+
+.edit-logout-section{
+  width: 100%;
+
+  display: flex;
+  gap: 2rem;
+}
+
+.my-podcast-list{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+
+  gap: 2rem;
+}
+
+
+
+
